--- a/Labfiles/01-azure-search/Python/margies-travel/.env
+++ b/Labfiles/01-azure-search/Python/margies-travel/.env
@@ -1,3 +1,3 @@
-SEARCH_SERVICE_ENDPOINT=your_search_endpoint
-SEARCH_SERVICE_QUERY_KEY=your_search_query_key
+SEARCH_SERVICE_ENDPOINT="https://fla-ai-search-service.search.windows.net"
+SEARCH_SERVICE_QUERY_KEY="kxkr0p7YA6hctiW4x6oxiDq5zolsmq1pUqwePS8g4gAzSeBDaSZc"
 SEARCH_INDEX_NAME=margies-index
